# tdd-with-python-example

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: carrinho_de_compras.py  test_carrinho_de_compras.py  test_math.py
