[tool.poetry]
name = "basic-tdd-with-python"
version = "0.1.0"
description = "Basic project to demonstrate TDD with python"
authors = ["Douglas Silva <douglaseusilva@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
faker = "^26.0.0"
mypy = "^1.10.1"
pylint = "^3.2.5"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
taskipy = "^1.13.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"